# gp-libs

./: .gitignore  .python-version  .tmuxp.yaml  .tool-versions  AGENTS.md  CHANGES  LICENSE  Makefile  README.md  justfile  linkify_issues.py  pyproject.toml  pytest_sphinx.py  setup.cfg
.github/workflows/: codeql-analysis.yml  docs.yml  tests.yml
docs/: AGENTS.md  Makefile  conf.py  developing.md  index.md  justfile  manifest.json  quickstart.md  redirects.txt
docs/_templates/: layout.html  page.html
docs/doctest/: index.md  pytest.md
docs/linkify_issues/: index.md
docs/modules/: index.md
docs/modules/doctest_docutils/: examples.md  how-to.md  index.md  reference.md  tutorial.md
docs/modules/linkify_issues/: custom-patterns.md  examples.md  how-to.md  index.md  reference.md
docs/modules/pytest_doctest_docutils/: examples.md  fixtures.md  how-to.md  index.md  reference.md  tutorial.md
docs/project/: code-style.md  contributing.md  index.md  releasing.md
docs/sphinx_toctree_autodoc_fix/: index.md
docs/sphinx_toctree_signature/: index.md
gp_libs/: __about__.py  __init__.py
notes/: 2025-11-25-upstream-backports.md
src/: doctest_docutils.py  docutils_compat.py  docutils_doctest.py  gp_libs.py  linkify_issues.py  pytest_doctest_docutils.py  pytest_sphinx.py  sphinx_toctree_autodoc_fix.py
tests/: __init__.py  conftest.py  test_async_doctest.py  test_basic.py  test_docs_console_examples.py  test_doctest_docutils.py  test_doctest_options.py  test_linkify_issues.py  test_plugin_suppression.py  test_pytest_doctest_docutils.py  test_sphinx_toctree_autodoc_fix.py  test_sphinx_toctree_signature.py
tests/regressions/: test_autouse_fixtures.py  test_gh_issue_48.py
